tests/custom/issues/551/stderr.expected
Error:
    Parser error in file: 551.essence Error is:
ValidatorError 551.essence:4:28:
  |
4 | such that and([true | b <- blocks])
  |                            ^^^^^^
Error: Expression of type member blocks of record {blocks : function int --> int} cannot be projected in a comprehension

